HelloUltraviolet/Fixtures/RejectedSource/Expressions/EnumInvalidDiscriminant/Expected.uv
//! Expected diagnostic metadata for the EnumInvalidDiscriminant rejected-source specimen.

expectedDiagnostic("E-TYP-1921", "Enum-Disc-Invalid")
